--- a/style.css
+++ b/style.css
@@ -1,62 +1,78 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     text-decoration: none;
     list-style-type: none;
 }
-body{
+
+body {
+    font-family: 'Potta One', cursive;
+
+}
+
+#main-area {
+    background-image: url(images/bus.png);
     font-family: 'Roboto', sans-serif;
-    background:url("images/bus.png");
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: scroll;
     background-size: cover;
+    min-height: 100vh;
 }
-nav{
+
+nav {
     height: 50px;
     width: 100%;
     padding: 20px 0;
 }
-.container{
+
+.container {
     width: 1200px;
     max-width: 85%;
     margin: 0 auto;
 }
-nav ul{
+
+nav ul {
     display: flex;
     justify-content: flex-end;
     margin: 0px 6px;
 }
-nav ul li a{
+
+nav ul li a {
     color: #fff;
     padding: 10px;
     text-transform: uppercase;
     margin-left: 30px;
 }
-nav ul li a:hover, a.active{
+
+nav ul li a:hover,
+a.active {
     background-color: #52AF3A;
     border-radius: 5px;
 }
-.main-content{
+
+.main-content {
     display: grid;
     grid-template-columns: 2fr 3fr;
     gap: 70px;
     align-items: center;
 }
-.booking-content{
+
+.booking-content {
     color: #fff;
     width: 100%;
     float: left;
     margin-left: 50px;
 }
-.booking-content h1{
-    font-size: 70px;
+
+.booking-content h1 {
+    font-size: 50px;
     text-transform: uppercase;
     font-family: 'Bebas Neue', cursive;
-    font-weight: 500;
 }
-.booking-form{
+
+.booking-form {
     background-color: #fff;
     border: 1px solid #ddd;
     padding: 10px;
@@ -65,20 +81,25 @@ nav ul li a:hover, a.active{
     width: 80%;
     margin: 50px 0px 0px 80px;
 }
-.booking-form h3{
+
+.booking-form h3 {
     margin: 10px 0px;
 }
-.booking-form  .input-group{
+
+.booking-form .input-group {
     margin: 10px 0;
 }
-.booking-form  .calculations{
+
+.booking-form .calculations {
     margin: 10px 0;
 }
-.booking-form  .calculations p{
+
+.booking-form .calculations p {
     font-weight: 500;
     margin-bottom: 10px;
 }
-.booking-form input{
+
+.booking-form input {
     width: 100%;
     display: block;
     padding: 10px;
@@ -88,27 +109,32 @@ nav ul li a:hover, a.active{
     border-radius: 4px;
     margin: 10px 0;
 }
-.booking-form .inputs{
+
+.booking-form .inputs {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 10px;
 }
-.f-class{
+
+.f-class {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.inp-width{
+
+.inp-width {
     min-width: 100px;
 }
-.plus-minus-btn{
+
+.plus-minus-btn {
     color: #3352F2;
     font-size: 30px;
     padding: 2px;
     margin: 10px 10px 0px 0px;
     word-spacing: 20px;
 }
-.btn-style{
+
+.btn-style {
     display: block;
     width: 100%;
     padding: 10px;
@@ -116,12 +142,14 @@ nav ul li a:hover, a.active{
     border: none;
     color: #fff;
     font-weight: 500;
-    background-color:  #52AF3A;
+    background-color: #52AF3A;
 }
-.amount{
+
+.amount {
     display: flex;
     justify-content: space-between;
 }
+
 button {
     background-color: steelblue;
     color: white;
@@ -130,6 +158,27 @@ button {
     cursor: pointer;
 
 }
-#transition-area{
+
+#transition-area {
     display: none;
+    text-align: center;
+}
+
+.transition {
+    top: 30%;
+    left: 6%;
+    margin: auto 0;
+    position: absolute;
+    text-transform: uppercase;
+    color: darkslateblue
+}
+
+.transition h1 {
+    font-size: 6.5rem;
+
+    font-weight: bold;
+}
+
+.transition p {
+    font-size: 2rem;
 }
